--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.17.3",
     "glob": "^8.0.3",
     "isomorphic-fetch": "^3.0.0",
+    "mysql2": "^3.13.0",
     "nodemon": "^2.0.22",
     "nodeqb": "^4.1.0-beta",
     "pantry-node": "^0.1.3"
